@@ -14,6 +14,8 @@ version 2.6.4 (??/??/20??):
 	AIM and ICQ:
 	* Better rate limit calculations and other improvements.  (Aman Gupta)
 	* More detailed error messages when messages fail to send.  (Aman Gupta)
+	* The simultaneous login account option is respected when using
+	  the clientLogin authentication method.
 
 	MSN:
 	* Don't forget display names for buddies.
